Tried to increase contrast between p1 and p2.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,12 +8,12 @@
   --player_1_color: lightcyan;
   //--player_1_color: cadetblue;
   //--player_1_color: darkseagreen;
-  //--player_1_color: khaki;
   //--player_1_color: lightblue;
   //--player_1_color: lightyellow;
   //--player_1_color: lightgoldenrodyellow;
 
-  --player_2_color: bisque;
+  //--player_2_color: bisque;
+  --player_2_color: khaki;
 
   --buffed_color: springgreen;
   //--buffed_color: mediumspringgreen;
