--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -29,7 +29,7 @@
       </div>
       <div class="selected-piece-stats">
         <div class="selected-piece-stat">
-          AT: {{getPiece().attack}}
+          AT: {{getPiece().attackPower}}
         </div>
         <div class="selected-piece-stat">
           AR: {{getPiece().attackRange}}
