--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -5,7 +5,6 @@
   <div *ngIf=cell.selected class="cell-selected" [ngClass]="{'cell-has-piece': cell.hasPiece()}"></div>
 
   <div *ngIf=cell.availableMove class="cell-available-move">
-    <!-- alternatives: ⁜, ☩, 🕂, ↔, ↕, ⟷ -->
     <img src="/images/icon/move_icon.ico">
   </div>
 
@@ -13,10 +12,13 @@
   <app-piece [piece]="cell.getPiece()!"></app-piece>
 
   <!-- Render this as an overlay on the piece. -->
-  <div *ngIf=cell.availableAttack
-      class="cell-available-attack"
-      [ngClass]="{'empty-attack-cell' : !cell.hasPiece()}">
-    <!-- alternative: ⚔, ⤲ -->
+  <div *ngIf=cell.willBeAttacked class="cell-will-be-attacked">
     <img src="/images/icon/attack_icon_2.webp">
+  </div>
+  <div *ngIf=cell.inAttackRange class="cell-in-attack-range">
+    <img src="/images/icon/attack_icon_2.webp">
+  </div>
+  <div *ngIf=cell.whereAttackWillEnd class="cell-where-attack-will-end">
+    <img src="/images/icon/move_icon.ico">
   </div>
 </div>
