--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -1,6 +1,5 @@
 <div *ngIf="piece" [ngClass]="{
       'piece': true,
-      'moved': piece.moved,
       'player1' : piece.player.id == 'player1',
       'player2' : piece.player.id == 'player2'
       }">
@@ -66,25 +65,25 @@
       </div>
     </button>
     <button class="piece-button confirm-move" (click)="confirmMove($event)"
-        [disabled]="piece.moved">
+        [disabled]="!piece.canMove()">
       <div class="piece-button-img-container">
         <img class="confirm-move-image" src="/images/icon/move_icon.ico">
       </div>
     </button>
     <button class="piece-button confirm-attack" (click)="confirmAttack($event)"
-        [disabled]="piece.attacked">
+        [disabled]="!piece.canAttack()">
       <div class="piece-button-img-container">
         <img class="confirm-attack-image" src="/images/icon/attack_icon_2.webp">
       </div>
     </button>
     <button class="piece-button rotate-cw" (click)="rotateClockwise($event)"
-      [disabled]="piece.moved && piece.attacked">
+      [disabled]="!piece.canRotate()">
       <div class="piece-button-img-container">
         <img class="rotate-cw-image" src="/images/icon/rotate_icon.ico">
       </div>
     </button>
     <button class="piece-button rotate-ccw" (click)="rotateCounterClockwise($event)"
-        [disabled]="piece.moved && piece.attacked">
+        [disabled]="!piece.canRotate()">
       <div class="piece-button-img-container">
         <img class="rotate-ccw-image" src="/images/icon/rotate_icon.ico">
       </div>
