--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -227,23 +227,23 @@
 }
 
 // =============================================
-// Piece Knockback
+// Piece Knockback/Pull
 // =============================================
-.knockback-indicator {
+.knockback-pull-indicator {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 5;
 }
 
-.knockback-indicator span {
+.knockback-pull-indicator span {
   display: block;
   width: 30px;
   height: 30px;
   border-bottom: 5px solid white;
   border-right: 5px solid white;
   transform: rotate(225deg);
-  animation: knockback_animate 1.5s infinite;
+  animation: knockback_pull_animate 1.5s infinite;
   margin-left: 33px;
   margin-top: -30px;
   border-bottom-color: var(--attack_color);
@@ -251,15 +251,15 @@
 
 }
 
-.knockback-indicator span:nth-child(2) {
+.knockback-pull-indicator span:nth-child(2) {
   animation-delay: -0.2s;
 }
 
-.knockback-indicator span:nth-child(3) {
+.knockback-pull-indicator span:nth-child(3) {
   animation-delay: -0.4s;
 }
 
-@keyframes knockback_animate {
+@keyframes knockback_pull_animate {
   0% {
       opacity: 0;
       transform: rotate(225deg) translate(-15px, -15px);
