New icons and tile depth.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -31,4 +31,21 @@
   --weak_color: #E43022;
 
   --attack_color: yellow;
+
+  --z_dialog: 21;
+  --z_dialog_background: 20;
+
+  --z_piece_buttons: 12;
+  --z_cell_selected: 11;
+  --z_available_indicator: 10;
+
+  --z_kb_pull_indicator: 11;
+  --z_piece: 10;
+
+  --z_mountain: 7;
+  --z_hill: 6;
+  --z_forest: 5;
+  --z_grassland: 4;
+  --z_marsh: 3;
+  --z_chasm: 2;
 }
