--- a/src/app/gameover/gameover.component.scss
+++ b/src/app/gameover/gameover.component.scss
@@ -6,7 +6,7 @@
   opacity: .5;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: var(--z_dialog_background);
 }
 
 .dialog {
@@ -19,7 +19,7 @@
   border-radius: 30px;
   border: 5px solid var(--foreground_color);
   padding: 40px;
-  z-index: 11;
+  z-index: var(--z_dialog);
 }
 
 .new-game {
