--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -4,6 +4,7 @@
   position: relative;
   cursor: pointer;
   color: black;
+  z-index: var(--z_piece);
 }
 
 // =============================================
@@ -229,11 +230,19 @@
 // =============================================
 // Piece Knockback/Pull
 // =============================================
+.knockback-pull-indicator-container {
+  position: absolute;
+  z-index: var(--z_kb_pull_indicator);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 .knockback-pull-indicator {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 5;
 }
 
 .knockback-pull-indicator span {
@@ -277,10 +286,12 @@
 // Piece Buttons
 // =============================================
 .piece-buttons {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: var(--z_piece_buttons);
 }
 
 .piece-button {
@@ -337,16 +348,20 @@
   bottom: -45px;
 }
 
-.rotate-cw-image {
-  width: 60%;
-}
-
 .rotate-ccw {
   right: -45px;
   bottom: -45px;
 }
 
-.piece-button-img-container>img.rotate-ccw-image {
+.rotate-cw-image,
+.rotate-ccw-image {
   width: 60%;
-  transform: translate(-50%, -50%) scaleX(-1);
+}
+
+.piece-button-img-container>img.rotate-cw-image {
+  transform: translate(-50%, -50%) scaleX(-1) rotate(-90deg);
+}
+
+.piece-button-img-container>img.rotate-ccw-image {
+  transform: translate(-50%, -50%) rotate(-90deg);
 }
