Added copyright footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,11 @@
   <app-players></app-players>
   <app-board></app-board>
 </div>
+
+<div class="footer">
+  <div class="horizon-attribution">
+    Trademarks are the property of their respective owners.
+    Game content and materials (c) Guerrilla Games and Sony Interactive Entertainment.
+    All rights reserved.
+  </div>
+</div>
