--- a/src/app/gameselection/gameselection.component.html
+++ b/src/app/gameselection/gameselection.component.html
@@ -1,6 +1,4 @@
 <div class="game-selection">
-  <span>TODO: Show board and pieces.</span>
-  <button [routerLink]="['/game']">
-    Select Game
-  </button>
+  <app-gamechoice *ngFor="let game of getGames()" [game]="game">
+  </app-gamechoice>
 </div>
