--- a/src/app/gameselection/gameselection.component.html
+++ b/src/app/gameselection/gameselection.component.html
@@ -1,4 +1,10 @@
 <div class="game-selection">
   <app-gamechoice *ngFor="let game of getGames()" [game]="game">
   </app-gamechoice>
+
+  <div class="custom-game-choice">
+    <button disabled="true">
+      Custom Game (TODO)
+    </button>
+  </div>
 </div>
