Moved Turn and Game Service to game class.

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <!-- This is a dialog that overlays everything -->
-<app-gameover></app-gameover>
+<app-gameover [game]="game"></app-gameover>
 
 <div class="left-panel">
   <app-selected></app-selected>
