--- a/src/app/gameselection/gameselection.component.html
+++ b/src/app/gameselection/gameselection.component.html
@@ -4,8 +4,9 @@
   <app-gamechoice [game]="getGame3()"></app-gamechoice>
 
   <div class="custom-game-choice">
-    <button disabled="true">
-      Custom Game (TODO)
+    <div class="custom-board-outline"></div>
+    <button class="select-custom-game" disabled="true">
+      Custom
     </button>
   </div>
 </div>
