--- a/src/app/gameselection/gameselection.component.scss
+++ b/src/app/gameselection/gameselection.component.scss
@@ -1,4 +1,36 @@
 .game-selection {
-  position: relative;
   margin-top: 140px;
+  width: 1000px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.custom-game-choice {
+  border: 1px solid white;
+  border-radius: 30px;
+  background: #333;
+  width: 400px;
+  height: 200px;
+  position: relative;
+  display: inline-block;
+  margin: 15px;
+}
+
+.custom-board-outline {
+  width: 160px;
+  height: 156px;
+  border: 2px solid #aaa;
+  border-style: dashed;
+  border-radius: 10px;
+  position: absolute;
+  top: 20px;
+  left: 22px;
+}
+
+button.select-custom-game {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  width: 160px;
 }
