Changed multi-part naming convention.

--- a/src/app/game-selection/game-selection.component.html
+++ b/src/app/game-selection/game-selection.component.html
@@ -1,7 +1,7 @@
 <div class="game-selection">
-  <app-gamechoice [game]="getGame1()"></app-gamechoice>
-  <app-gamechoice [game]="getGame2()"></app-gamechoice>
-  <app-gamechoice [game]="getGame3()"></app-gamechoice>
+  <app-game-choice [game]="getGame1()"></app-game-choice>
+  <app-game-choice [game]="getGame2()"></app-game-choice>
+  <app-game-choice [game]="getGame3()"></app-game-choice>
 
   <div class="custom-game-choice">
     <div class="custom-board-outline"></div>
