--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <!-- This is a dialog that overlays everything -->
-<app-gameover [game]="game"></app-gameover>
+<app-game-over [game]="game"></app-game-over>
 
 <div class="left-panel">
   <app-selected></app-selected>
