Added more games to choose from.

--- a/src/app/game-choice/game-choice.component.scss
+++ b/src/app/game-choice/game-choice.component.scss
@@ -25,6 +25,7 @@ button.select-game {
   top: 20px;
   right: 30px;
   width: 160px;
+  height: 40px;
 }
 
 ul.piece-descriptor {
@@ -32,7 +33,7 @@ ul.piece-descriptor {
   right: 30px;
   width: 150px;
   text-align: left;
-  top: 50px;
+  top: 56px;
 }
 
 .piece-descriptor li {
