--- a/src/app/game-selection/game-selection.component.scss
+++ b/src/app/game-selection/game-selection.component.scss
@@ -1,6 +1,6 @@
 .game-selection {
   margin-top: 140px;
-  width: 1000px;
+  width: 1300px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -33,4 +33,5 @@ button.select-custom-game {
   top: 20px;
   right: 30px;
   width: 160px;
+  height: 40px;
 }
