Clicking title navigates home.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <img src="/images/banner.png">
-  <div class="title">Strike</div>
+  <div class="title" (click)="navigateHome()">Strike</div>
 </div>
 
 <div class="app-background">
