--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,7 +22,7 @@
   left: 20px;
   height: var(--header_height);
   vertical-align: middle;
-  cursor: default;
+  cursor: pointer;
 }
 
 .app-background {
