Moved audio tag to the header.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,12 @@
   cursor: pointer;
 }
 
+.audio-controls {
+  position: absolute;
+  right: 22px;
+  top: 22px;
+}
+
 .app-background {
   position: absolute;
   left: 0;
