--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="header">
   <img src="/images/banner.png">
   <div class="title" (click)="navigateHome()">Strike</div>
+  <audio class="audio-controls" controls loop>
+    <source src="/audio/rusted_sands.mp3" type="audio/mpeg">
+  </audio>
 </div>
 
 <div class="app-background">
