Gave an indicator for confirmable.

--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -299,6 +299,10 @@
   border-radius: 25px;
 }
 
+.piece-button.is-confirmable {
+  background: limegreen;
+}
+
 .piece-button-img-container {
   width: 100%;
   height: 100%;
