Added some more music.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
   <img src="/images/banner.png">
   <div class="title" (click)="navigateHome()">Strike</div>
   <audio class="audio-controls" controls loop>
-    <source src="/audio/rusted_sands.mp3" type="audio/mpeg">
+    <!--<source src="/audio/rusted_sands.mp3" type="audio/mpeg">-->
+    <!--<source src="/audio/awash.mp3" type="audio/mpeg">-->
+    <source src="/audio/the_sanctuary_of_zi'tah.mp3" type="audio/mpeg">
   </audio>
 </div>
 
