--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -157,10 +157,11 @@
 .piece-health-number {
   position: absolute;
   bottom: 6px;
-  right: 8px;
+  right: 4px;
   font-size: 14px;
   color: white;
-  transform: translateX(-50%);
+  text-align: center;
+  width: 24px;
 }
 
 // =============================================
