--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -4,6 +4,8 @@
   </div>
   <div *ngIf=cell.selected class="cell-selected" [ngClass]="{'cell-has-piece': cell.hasPiece()}"></div>
 
+  <div *ngIf=showAvailableMoveStarting() class="cell-available-move-starting">
+  </div>
   <div *ngIf=showAvailableMove() class="cell-available-move">
     <img src="/images/icon/move_icon_white.png">
   </div>
