--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -164,6 +164,28 @@
   width: 24px;
 }
 
+.piece-health-drop-indicator {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60px;
+  background: rgba(0, 0, 0, 80%);
+  border-radius: 10px;
+}
+
+.piece-health-drop-indicator>img {
+  width: 20px;
+  vertical-align: middle;
+  margin-top: -1px;
+}
+
+.piece-health-drop-number {
+  display: inline-block;
+  vertical-align: middle;
+  color: var(--debuffed_color);
+}
+
 // =============================================
 // Piece Attack
 // =============================================
